cluster/apps/ombi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  labels:
    app.kubernetes.io/name: ombi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ombi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ombi
    spec:
      containers:
        - name: ombi
          image: lscr.io/linuxserver/ombi:4.7.4
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 500Mi
          ports:
            - name: http
              protocol: TCP
              containerPort: 3579
          volumeMounts:
            - name: ombi-config
              mountPath: /config
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: ombi-config
          persistentVolumeClaim:
            claimName: ombi-config
