cluster/apps/ombi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ombi-svc
  labels:
    app.kubernetes.io/name: ombi
spec:
  selector:
    app.kubernetes.io/name: ombi
  ports:
  - name: http
    protocol: TCP
    port: 3579
    targetPort: ombi-port
  type: ClusterIP
